# SerialPlotter

./: CMakeLists.txt  license.md  readme.md
core/: Application.cc  Application.h  Main.cc
core/helper/widgets/: Plot.cc  Plot.h  PlotType.h
core/module/: Module.h
core/module/output/: Plotter.cc  Plotter.h
core/wrapper/: Renderer.cc  Renderer.h
lib/ImGui/: CMakeLists.txt
lib/ImGui/include/: imgui.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_internal.h  imstb_truetype.h
lib/ImGui/src/: imgui.cc  imgui_demo.cc  imgui_draw.cc  imgui_impl_glfw.cc  imgui_impl_opengl3.cc  imgui_widgets.cc
lib/ImNodes/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
